--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
+URL: https://github.com/Pablo-Gabas/PaquetePablo
+BugReports: https://github.com/Pablo-Gabas/PaquetePablo/issues
